--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mdsol/sandman": "https://s3.amazonaws.com/mdsol-resources/sandman-npm/mdsol-sandman-1.5.4.tgz",
+    "@mdsol/lego": "https://s3.amazonaws.com/mdsol-resources/lego/mdsol-lego-4.1.2.tgz",
+    "@mdsol/sandman": "https://s3.amazonaws.com/mdsol-resources/sandman-npm/mdsol-sandman-1.5.9.tgz",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
@@ -28,5 +30,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-bootstrap": "^0.31.0"
   }
 }
